--- a/data/mapping.yml
+++ b/data/mapping.yml
@@ -12,6 +12,18 @@ tables:
       - key: name:ru
         name: name_ru
         type: string
+      - key: addr:country
+        name: country
+        type: string
+      - key: addr:city
+        name: city
+        type: string
+      - key: addr:street
+        name: street
+        type: string
+      - key: addr:housenumber
+        name: housenumber
+        type: string
       - key: null
         name: all_tags
         type: hstore_tags
@@ -30,6 +42,18 @@ tables:
       - key: name:ru
         name: name_ru
         type: string
+      - key: addr:country
+        name: country
+        type: string
+      - key: addr:city
+        name: city
+        type: string
+      - key: addr:street
+        name: street
+        type: string
+      - key: addr:housenumber
+        name: housenumber
+        type: string
       - key: null
         name: all_tags
         type: hstore_tags
@@ -47,6 +71,18 @@ tables:
         type: string
       - key: name:ru
         name: name_ru
+        type: string
+      - key: addr:country
+        name: country
+        type: string
+      - key: addr:city
+        name: city
+        type: string
+      - key: addr:street
+        name: street
+        type: string
+      - key: addr:housenumber
+        name: housenumber
         type: string
       - key: null
         name: all_tags
